--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -44,7 +44,7 @@
     color: map-get($color, tertiary);
 
     @include sm {
-      @include text(2xl);
+      @include text(xl);
     }
 
     i {
@@ -78,9 +78,9 @@
     opacity: 0;
     visibility: hidden;
     position: fixed;
-    top: deep-map-get($height, header, lg);
+    top: 0;
     left: 0;
-    z-index: 5;
+    z-index: -5;
     width: 100%;
     height: 100vh;
     flex-direction: column;
@@ -91,7 +91,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(0, 0, 0, 0.8);
-    transition: map-get($transition, 800);
+    transition: map-get($transition, 500);
     transition-property: visibility, opacity;
     // 將 nav 的所有直接子層(.nav__link) 設定 nav 開啟前的樣式
     @for $i from 1 through 6 {
@@ -102,9 +102,6 @@
         transition-property: opacity, transform;
       }
     }
-  }
-  @include sm {
-    top: deep-map-get($height, header, sm);
   }
 
   &--open {
@@ -166,8 +163,7 @@
     &::before {
       content: "";
       position: absolute;
-      // bottom: -0.375rem;
-      bottom: -7px;
+      bottom: -0.5rem;
       width: 100%;
       height: 0.125rem;
       transform: scaleX(0);
@@ -181,6 +177,7 @@
       &::before {
         transform: scaleX(1);
         background-color: map-get($color, tertiary);
+        background-color: rgb(237 135 108);
         box-shadow: 0 0 13px 4px rgb(213 108 80);
       }
     }
