--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -83,7 +83,7 @@
       z-index: 5;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(rgb(0 0 0 / 15%), rgb(0 0 0));
+      background-image: linear-gradient(210deg, rgb(0 0 0 / 0%), rgba(0, 0, 0, 0.9));
     }
   }
 
@@ -122,7 +122,7 @@
     height: 100%;
     max-width: 50%;
     padding-bottom: 6rem;
-    @include xl{
+    @include xl {
       max-width: 62.5rem;
     }
     // 選中所有的直接子層
@@ -175,11 +175,10 @@
 
   &__slide-overview {
     @include text(xl);
-
+    max-width: 43.75rem;
     @include md {
       @include text(lg);
     }
-
     @include sm {
       @include text(base);
     }
