--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -97,7 +97,7 @@
       z-index: 5;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgb(0, 0, 0));
+      background-image: linear-gradient(to bottom, rgb(0 0 0 / 0%), rgb(0 0 0));
     }
   }
 
@@ -355,12 +355,7 @@
     border: 0;
   }
 
-  //* Similar Movies
-  &__similar {
-  }
-
   //* Related Links
-
   &__related-links-content {
     @include flex;
   }
