--- a/src/scss/page/_Search.scss
+++ b/src/scss/page/_Search.scss
@@ -6,6 +6,7 @@
   &__bar {
     position: sticky;
     top: 0;
+    z-index: 2;
     padding-top: calc(#{deep-map-get($height, header, lg)} + 3rem);
     background-color: map-get($color, secondary);
     width: 100%;
@@ -29,14 +30,13 @@
       color: hsl(13, 61%, 25%);
     }
   }
-
+  // 清除 input 內文字 btn
   &__clear-btn {
     @include text(xl);
     position: absolute;
     bottom: 0.625rem;
     right: 1.25rem;
     padding: 0;
-
     visibility: hidden;
     opacity: 0;
     // clear-btn 出現
@@ -57,7 +57,7 @@
     z-index: -1;
     overflow: hidden;
     transform: translateY(-0.75rem);
-    padding-top: .75rem;
+    padding-top: 0.75rem;
     width: 100%;
     border-bottom-left-radius: map-get($border-radius, base);
     border-bottom-right-radius: map-get($border-radius, base);
