[修正] resize 時 nav transition 問題

--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -14,16 +14,14 @@
   background-image: linear-gradient(to bottom, rgb(0 0 0 / 60%), transparent);
   color: transparent;
   outline: 1px solid transparent;
-
+  // .header 背景
   &--black {
     background-color: map-get($color, secondary);
     outline: 1px solid map-get($color, tertiary);
   }
-
   @include md {
     justify-content: space-between;
     padding: 0 deep-map-get($x-spacing, sm);
-
     // 螢幕 < md 時套用 hamburger bar @mixin
     @include hamburger(
       $width: 1.75rem,
@@ -32,26 +30,22 @@
       $line-color: map-get($color, primary)
     );
   }
-
   @include sm {
     height: deep-map-get($height, header, sm);
   }
-
+  // logo
   &__logo {
     @include text(2xl);
     white-space: nowrap;
     font-weight: bold;
     color: map-get($color, tertiary);
-
     @include sm {
       @include text(xl);
     }
-
     i {
       margin-right: 0.5rem;
     }
   }
-
   // header__menu-btn
   &__menu-btn {
     display: none;
@@ -64,6 +58,11 @@
       color: map-get($color, primary);
     }
   }
+}
+
+.test {
+  transition: map-get($transition, 500);
+  transition-property: visibility, opacity;
 }
 
 //* nav
@@ -90,19 +89,21 @@
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(0, 0, 0, 0.8);
-    transition: map-get($transition, 500);
-    transition-property: visibility, opacity;
+    // transition: map-get($transition, 500);
+    // transition-property: visibility, opacity;
+
     // 將 nav 的所有直接子層(.nav__link) 設定 nav 開啟前的樣式
     @for $i from 1 through 6 {
       & > :nth-child(#{$i}) {
         opacity: 0;
         transform: translateX(9.375rem);
-        transition: ease-in-out 500ms #{$i * 100}ms;
+        transition: ease-in-out 300ms #{$i * 100}ms;
         transition-property: opacity, transform;
       }
     }
   }
 
+  // nav 開啟狀態 class
   &--open {
     @include md {
       opacity: 1;
@@ -118,12 +119,11 @@
   }
 
   &__link {
-    //@include flex($ai: center);
     @include text(base);
     position: relative;
     font-weight: bold;
     transition: color map-get($transition, 150);
-
+    // 附帶在 nav__link 上的數字
     &-number {
       @include rounded-full;
       @include flex($jc: center, $ai: center);
@@ -144,8 +144,7 @@
       @include text(xl);
       opacity: 0;
     }
-
-    //* .nav__link hover 狀態
+    // .nav__link hover 狀態
     @include hover-query() {
       &:hover {
         color: map-get($color, tertiary);
@@ -157,8 +156,7 @@
         }
       }
     }
-
-    //* link 下方底線
+    // link 下方底線
     &::before {
       content: "";
       position: absolute;
@@ -180,7 +178,6 @@
         box-shadow: 0 0 13px 4px rgb(213 108 80);
       }
     }
-
     // 從最後數過來倒數第二個項目(watchlist)
     &:nth-last-child(2) {
       margin-left: auto;
