--- a/src/scss/abstracts/_mixin.scss
+++ b/src/scss/abstracts/_mixin.scss
@@ -73,8 +73,8 @@
 }
 
 //* 將某一個元素的所有直接子元素出現時加上淡入效果
-// - 需使用 .appear 來加進該元素當中才會觸發效果
-@mixin transition-appear($amount) {
+// - 需使用 .show 來加進該元素當中才會觸發效果
+@mixin transition-show($amount) {
   // 選中元素的所有的子層
   & > :nth-child(n) {
     opacity: 0;
@@ -89,7 +89,7 @@
     }
   }
   // 出現時樣式
-  &.appear {
+  &.show {
     & > :nth-child(n) {
       opacity: 1;
       transform: translateY(0);
