--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -72,7 +72,7 @@ $gap-amount: (
       opacity: 0;
     }
   }
-  
+
   // .movies-card__img
   &__img {
     width: 100%;
@@ -110,6 +110,7 @@ $gap-amount: (
   &__info {
     @include flex($wrap: wrap);
     @include text(sm);
+    column-gap: 0.5rem;
     margin-top: 0.5rem;
     @include md {
       display: none;
@@ -122,7 +123,8 @@ $gap-amount: (
     & > :nth-child(2) {
       @include text(sm);
       i {
-        margin-left: 0.25rem;
+        @include text(xs);
+        margin-right: 0.25rem;
       }
     }
   }
