--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -6,7 +6,7 @@
   //* genres list
   &__genres-list {
     @include x-spacing;
-    padding-bottom: 3rem;
+    margin-top: 4rem;
   }
 
   //* genres item
@@ -25,15 +25,15 @@
     }
   }
 
-  //* genres link
+  //* 各個 genres 區塊 link
   &__genres-link {
     @include flex($ai: center);
     align-self: start;
-
+    // hover 狀態 i 的行為
     &:hover i {
       animation: x-moving map-get($transition, 300) infinite alternate;
     }
-
+    // 向右箭頭
     i {
       @include text(xl);
       margin-left: 0.75rem;
@@ -48,7 +48,6 @@
   &__swiper {
     @include flex;
     width: 100%;
-
     // 底部動態 bullets
     .swiper-pagination-bullets-dynamic {
       margin-bottom: 0.5rem;
@@ -70,11 +69,9 @@
     display: block;
     width: 100%;
     height: 100vh;
-
     @include lg {
       max-height: none;
     }
-
     &::before {
       content: "";
       position: absolute;
@@ -84,6 +81,9 @@
       width: 100%;
       height: 100%;
       background-image: linear-gradient(210deg, rgb(0 0 0 / 0%), rgba(0, 0, 0, 0.9));
+      @include sm {
+        background-image: linear-gradient(to bottom, rgb(0 0 0 / 20%), rgb(0, 0, 0));
+      }
     }
   }
 
@@ -92,7 +92,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-
     // img tag (backdrop)
     &--backdrop {
       @include md {
@@ -152,7 +151,7 @@
   &__slide-title {
     @include text(5xl);
     @include md {
-      @include text(2xl);
+      @include text(3xl);
     }
   }
 
@@ -165,16 +164,16 @@
       margin-right: 1rem;
     }
     @include sm {
-      @include text(xl);
+      @include text(lg);
     }
   }
 
+  // 評等
   &__slide-vote {
-    @include text(xl);
   }
 
+  // 文字介紹
   &__slide-overview {
-    @include text(xl);
     max-width: 43.75rem;
     @include md {
       @include text(lg);
