--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -97,8 +97,6 @@ $gap-amount: (
     }
   }
 
-  //? 原本在這裡，但已經移走的
-
   // 切換 watchcard option 的按鈕(僅在 breakpoint < md 出現)
   &__option-btn {
     display: none;
@@ -166,6 +164,7 @@ $gap-amount: (
       border-radius: map-get($border-radius, md);
     }
   }
+
   // poster
   &__movie-poster {
     object-fit: cover;
@@ -173,6 +172,7 @@ $gap-amount: (
     width: 100%;
     height: 100%;
   }
+
   // watchcard__content
   &__content {
     @include flex($dir: column, $jc: space-between);
@@ -180,16 +180,17 @@ $gap-amount: (
     z-index: 10;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     border-radius: 1rem;
-    
+    overflow: hidden;
     @include md {
       position: static;
+      overflow: visible;
     }
     a {
       color: map-get($color, secondary);
     }
   }
+
   // watchcard__title
   &__title {
     @include text(2xl);
@@ -220,7 +221,6 @@ $gap-amount: (
     transform: translateY(101%);
     transition: map-get($transition, 300);
     transition-property: transform;
-
     @include md {
       position: absolute;
       z-index: -1;
@@ -234,7 +234,6 @@ $gap-amount: (
       transition: map-get($transition, 300);
       transition-property: visibility, opacity;
       background-color: transparent;
-
       // watchcard__btns 每個子層
       @for $i from 1 through 3 {
         & > :nth-child(#{$i}) {
@@ -254,7 +253,6 @@ $gap-amount: (
     width: 33.3%;
     transition: map-get($transition, 300);
     transition-property: color, background-color;
-
     @include md {
       @include rounded-full;
       @include flex($jc: center, $ai: center);
@@ -265,12 +263,10 @@ $gap-amount: (
       font-size: 0;
       background-color: map-get($color, tertiary);
     }
-
     @include xs {
       width: 2.5rem;
       height: 2.5rem;
     }
-
     @include hover-query {
       &:hover {
         background-color: map-get($color, tertiary);
