[整理] 資料夾結構

--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -1,6 +1,7 @@
-@forward "Home";
-@forward "MovieDetail";
-@forward "Watchlist";
-@forward "Search";
+@forward "../../pages/Home/Home";
+@forward "../../pages/MovieDetail/MovieDetail";
+@forward "../../pages/Watchlist/Watchlist";
+@forward "../../pages/Search/Search";
+@forward "../../pages/NotFound/NotFound";
 @forward "Movies";
-@forward "NotFound";
+
