--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -1,7 +1,7 @@
 @forward "../../pages/Home/Home";
+@forward "../../pages/Movies/Movies";
 @forward "../../pages/MovieDetail/MovieDetail";
 @forward "../../pages/Watchlist/Watchlist";
 @forward "../../pages/Search/Search";
 @forward "../../pages/NotFound/NotFound";
-@forward "Movies";
 
