[修改] 針對 mobile 畫面做些修正

--- a/src/components/MovieSwiper/_movie-swiper.scss
+++ b/src/components/MovieSwiper/_movie-swiper.scss
@@ -55,7 +55,7 @@
 
   // swiper 電影名稱
   &__title {
-    @include text(lg);
-    font-weight: 400;
+    @include text(base);
+    font-weight: 900;
   }
 }
